# notify-python-demo

./: .gitignore  README.md  pyproject.toml  sample.env
notify_python_demo/: demo.py  interactive_demo.py  log_viewer.py  test_script.py
